First generation of cudl.csv

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,14 @@
           <groupId>com.opencsv</groupId>
           <artifactId>opencsv</artifactId>
           <version>4.1</version>
-        </dependency>    
+        </dependency> 
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+
+        
   </dependencies>
 </project>
