--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
   <properties>
         <jackson.version>2.9.7</jackson.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
   <dependencies>
         <dependency>
